// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`badge > renders correctly prominence default 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__11h3ve90 styles_prominence_default__11h3ve92 styles_sentiment_neutral__11h3ve97 styles_size_medium__11h3ve9e styles_undefined_compound_6__11h3ve9n style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
      style="--whiteSpace__1giziax1: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly prominence strong 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__11h3ve90 styles_prominence_strong__11h3ve93 styles_sentiment_neutral__11h3ve97 styles_size_medium__11h3ve9e styles_undefined_compound_13__11h3ve9u style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
      style="--whiteSpace__1giziax1: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment danger 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__11h3ve90 styles_prominence_default__11h3ve92 styles_sentiment_danger__11h3ve95 styles_size_medium__11h3ve9e styles_undefined_compound_2__11h3ve9j style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
      style="--whiteSpace__1giziax1: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment info 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__11h3ve90 styles_prominence_default__11h3ve92 styles_sentiment_info__11h3ve96 styles_size_medium__11h3ve9e styles_undefined_compound_3__11h3ve9k style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
      style="--whiteSpace__1giziax1: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__11h3ve90 styles_prominence_default__11h3ve92 styles_sentiment_neutral__11h3ve97 styles_size_medium__11h3ve9e styles_undefined_compound_6__11h3ve9n style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
      style="--whiteSpace__1giziax1: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__11h3ve90 styles_prominence_default__11h3ve92 styles_sentiment_primary__11h3ve98 styles_size_medium__11h3ve9e styles_undefined_compound_0__11h3ve9h style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
      style="--whiteSpace__1giziax1: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment secondary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__11h3ve90 styles_prominence_default__11h3ve92 styles_sentiment_secondary__11h3ve99 styles_size_medium__11h3ve9e styles_undefined_compound_1__11h3ve9i style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
      style="--whiteSpace__1giziax1: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__11h3ve90 styles_prominence_default__11h3ve92 styles_sentiment_success__11h3ve9a styles_size_medium__11h3ve9e styles_undefined_compound_4__11h3ve9l style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
      style="--whiteSpace__1giziax1: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment warning 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__11h3ve90 styles_prominence_default__11h3ve92 styles_sentiment_warning__11h3ve9b styles_size_medium__11h3ve9e styles_undefined_compound_5__11h3ve9m style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
      style="--whiteSpace__1giziax1: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__11h3ve90 styles_prominence_default__11h3ve92 styles_sentiment_neutral__11h3ve97 styles_size_large__11h3ve9d styles_undefined_compound_6__11h3ve9n style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a"
      style="--whiteSpace__1giziax1: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly size medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__11h3ve90 styles_prominence_default__11h3ve92 styles_sentiment_neutral__11h3ve97 styles_size_medium__11h3ve9e styles_undefined_compound_6__11h3ve9n style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
      style="--whiteSpace__1giziax1: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__11h3ve90 styles_prominence_default__11h3ve92 styles_sentiment_neutral__11h3ve97 styles_size_small__11h3ve9f styles_undefined_compound_6__11h3ve9n style__1do42ls0 style_prominence_default__1do42ls4 style_variant_captionSmall__1do42lsq style_undefined_compound_0__1do42ls1a"
      style="--whiteSpace__1giziax1: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly size xsmall 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__11h3ve90 styles_prominence_default__11h3ve92 styles_sentiment_neutral__11h3ve97 styles_size_xsmall__11h3ve9g styles_undefined_compound_6__11h3ve9n style__1do42ls0 style_prominence_default__1do42ls4 style_variant_captionSmall__1do42lsq style_undefined_compound_0__1do42ls1a"
      style="--whiteSpace__1giziax1: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly when disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__11h3ve90 styles_disabled_true__11h3ve91 styles_prominence_default__11h3ve92 styles_sentiment_neutral__11h3ve97 styles_size_medium__11h3ve9e style__1do42ls0 style_prominence_weak__1do42ls7 style_variant_caption__1do42lsp style_undefined_compound_3__1do42ls1d"
      style="--whiteSpace__1giziax1: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__11h3ve90 styles_prominence_default__11h3ve92 styles_sentiment_neutral__11h3ve97 styles_size_medium__11h3ve9e styles_undefined_compound_6__11h3ve9n style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
      style="--whiteSpace__1giziax1: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly with icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__11h3ve90 styles_prominence_default__11h3ve92 styles_sentiment_neutral__11h3ve97 styles_size_medium__11h3ve9e styles_undefined_compound_6__11h3ve9n style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
      style="--whiteSpace__1giziax1: nowrap;"
    >
      <svg
        aria-hidden="true"
        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          clip-rule="evenodd"
          d="M8 2.313a5.687 5.687 0 1 0 0 11.374A5.687 5.687 0 0 0 8 2.313M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8m6.344-2.643c0-.363.294-.656.656-.656h.005c.363 0 .657.293.657.656v.005a.656.656 0 0 1-.657.656H8a.656.656 0 0 1-.656-.656zm.213 2.765a.657.657 0 0 1-.38-1.238l.03-.014c.906-.453 1.925.365 1.68 1.347l-.444 1.775a.657.657 0 0 1 .38 1.238l-.03.015c-.906.453-1.925-.365-1.68-1.347z"
          fill-rule="evenodd"
        />
      </svg>
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;
